feat(tarko): refine workspace design (#1008)

--- a/multimodal/websites/docs/docs/en/guide/advanced/server.mdx
+++ b/multimodal/websites/docs/docs/en/guide/advanced/server.mdx
@@ -80,7 +80,7 @@ Response:
       "createdAt": 1622548800000,
       "updatedAt": 1622548800000,
       "name": "Session Name",
-      "workingDirectory": "/path/to/workspace",
+      "workspace": "/path/to/workspace",
       "tags": ["tag1", "tag2"]
     }
     // ...more sessions
