chore(docs): correct workspace default path in English and Chinese guides (#1124)

--- a/multimodal/websites/docs/docs/en/guide/basic/workspace.mdx
+++ b/multimodal/websites/docs/docs/en/guide/basic/workspace.mdx
@@ -6,7 +6,7 @@ In Agent TARS' local usage scenario, the directory that is currently allowed to 
 
 ## Default Settings
 
-To avoid affecting your local file system, the default value of Workspace is `$pwd/gent-tars-workspace`, which adds a layer of isolation. When you ask Agent TARS what files it can see:
+To avoid affecting your local file system, the default value of Workspace is `$pwd/agent-tars-workspace`, which adds a layer of isolation. When you ask Agent TARS what files it can see:
 
 ```text
 What files you can see?
