--- a/multimodal/websites/docs/docs/zh/guide/basic/workspace.mdx
+++ b/multimodal/websites/docs/docs/zh/guide/basic/workspace.mdx
@@ -6,7 +6,7 @@ import { VideoPanel } from '@components/VideoPanel';
 
 ## 默认设定
 
-为了避免影响你本地的文件系统，Workspace 的默认值为 `$pwd/gent-tars-workspace`，相当于增加了一层隔离，当你问 Agent TARS 能看到哪些文件：
+为了避免影响你本地的文件系统，Workspace 的默认值为 `$pwd/agent-tars-workspace`，相当于增加了一层隔离，当你问 Agent TARS 能看到哪些文件：
 
 ```text
 What files you can see?
