--- a/multimodal/websites/docs/docs/en/guide/get-started/quick-start.mdx
+++ b/multimodal/websites/docs/docs/en/guide/get-started/quick-start.mdx
@@ -8,7 +8,11 @@ import { IntroAnimation } from '@components/IntroAnimation';
 <br />
 <br />
 
-<IntroAnimation />
+<VideoPanel
+  src="https://lf3-static.bytednsdoc.com/obj/eden-cn/zyha-aulnh/ljhwZthlaukjlkulzlp/docs/agent-tars-introduction-v1.mp4"
+  loop
+  autoPlay
+/>
 
 <br />
 <br />
