docs: upgrade rspress to v2.0.0-beta.32 (#1495)

--- a/multimodal/websites/docs/docs/en/blog/2025-06-25-introducing-agent-tars-beta.mdx
+++ b/multimodal/websites/docs/docs/en/blog/2025-06-25-introducing-agent-tars-beta.mdx
@@ -514,7 +514,7 @@ In the new version of Agent TARS, we built the entire architecture on Streaming,
 
 ### Web UI
 
-Thanks to the [Agent Event Stream](#agent-event-stream) introduced in the new version of Agent TARS, Web UI can be developed completely independently and interact with [Agent TARS Server](../guide/basic/server.mdx) through protocols. Ultimately, we bring a clean Web UI:
+Thanks to the [Agent Event Stream](#agent-event-stream) introduced in the new version of Agent TARS, Web UI can be developed completely independently and interact with [Agent TARS Server](../guide/advanced/server.mdx) through protocols. Ultimately, we bring a clean Web UI:
 
 <Grid columns={2} gap="md">
   <GridItem>
