--- a/multimodal/websites/docs/docs/zh/blog/2025-06-25-introducing-agent-tars-beta.mdx
+++ b/multimodal/websites/docs/docs/zh/blog/2025-06-25-introducing-agent-tars-beta.mdx
@@ -503,7 +503,7 @@ Open https://2captcha.com/demo/normal and pass it
 
 ### Web UI
 
-得益于 Agent TARS 新版本中引入的 [Agent Event Stream](#agent-event-stream)，Web UI 能够完全独立地进行开发，并通过协议与 [Agent TARS Server](../guide/basic/server.mdx) 交互，最终，我们带来了纯净的 Web UI：
+得益于 Agent TARS 新版本中引入的 [Agent Event Stream](#agent-event-stream)，Web UI 能够完全独立地进行开发，并通过协议与 [Agent TARS Server](../guide/advanced/server.mdx) 交互，最终，我们带来了纯净的 Web UI：
 
 <Grid columns={2} gap="md">
   <GridItem>
