docs: correct typo in mcp documentation (#1516)

--- a/multimodal/websites/docs/docs/zh/guide/basic/mcp.mdx
+++ b/multimodal/websites/docs/docs/zh/guide/basic/mcp.mdx
@@ -61,7 +61,7 @@ Draw a self-driving route map for Hangzhou, Shanghai, and Suzhou
 />
 
 ::: tip 
-由于通过 stdio 的方式连接 MCP Servers 本身执行存在好事，因此通过 stdio 的方式启动 Agent TARS 会导致 Session 的创建和激活变慢，后续我们会进行相关优化，敬请期待。
+由于通过 stdio 的方式连接 MCP Servers 本身执行存在耗时，因此通过 stdio 的方式启动 Agent TARS 会导致 Session 的创建和激活变慢，后续我们会进行相关优化，敬请期待。
 :::
 
 ## 进阶
