feat(tarko-agent-server): add `server.models` support (#1488)

--- a/multimodal/websites/docs/docs/zh/guide/basic/model-provider.mdx
+++ b/multimodal/websites/docs/docs/zh/guide/basic/model-provider.mdx
@@ -1,5 +1,7 @@
-# Model Provider
+---
+title: 模型提供商
+---
 
-import { UnderConstructionLayout } from '@components/UnderConstructionLayout'
+# 模型提供商
 
-<UnderConstructionLayout />
+此文档正在建设中。
