docs(tarko-agent): init documentation (#1502)

--- a/multimodal/websites/docs/docs/en/blog/2025-06-25-introducing-agent-tars-beta.mdx
+++ b/multimodal/websites/docs/docs/en/blog/2025-06-25-introducing-agent-tars-beta.mdx
@@ -406,7 +406,7 @@ This stems from CLI's advantages without losing core capabilities:
 
 <Figure src="/compare-install-size.png" title="Compare install size" zoom={1} />
 
-For usage guidelines of `@agent-tars/cli`, please visit [Quick Start](../guide/get-started/quick-start.mdx).
+For usage guidelines of `@agent-tars/cli`, please visit [Quick Start](/guide/get-started/quick-start).
 
 <br />
 
@@ -480,7 +480,7 @@ From the final released API, we provide three operation methods:
 | `visual-grounding` | Operation capabilities based on GUI Agent ([UI-TARS](https://seed-tars.com/) / [Doubao 1.5 VL](https://www.volcengine.com/docs/82379/1554521)), without DOM-related tools. |
 | `hybrid` | Operation capabilities including both `visual-grounding` and `dom` |
 
-For how to use and more details, please visit [Browser Operation](../guide/basic/browser.mdx).
+For how to use and more details, please visit [Browser Operation](/guide/basic/browser).
 
 ---
 
@@ -514,7 +514,7 @@ In the new version of Agent TARS, we built the entire architecture on Streaming,
 
 ### Web UI
 
-Thanks to the [Agent Event Stream](#agent-event-stream) introduced in the new version of Agent TARS, Web UI can be developed completely independently and interact with [Agent TARS Server](../guide/advanced/server.mdx) through protocols. Ultimately, we bring a clean Web UI:
+Thanks to the [Agent Event Stream](#agent-event-stream) introduced in the new version of Agent TARS, Web UI can be developed completely independently and interact with Agent TARS Server through protocols. Ultimately, we bring a clean Web UI:
 
 <Grid columns={2} gap="md">
   <GridItem>
@@ -773,7 +773,7 @@ import { ActionCard } from '@components/ActionCard';
     title="Quick Start"
     description="Getting started with Agent TARS CLI"
     icon="🚀"
-    href="../guide/get-started/quick-start.html"
+    href="/guide/get-started/quick-start"
     color="blue"
   />
   <ActionCard
